add bundle install in job

--- a/.github/workflows/jekyll-deploy.yml
+++ b/.github/workflows/jekyll-deploy.yml
@@ -14,6 +14,7 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: "18.x"
+      - run: sudo gem install bundler && sudo bundle install
       - run: npm install
       - run: npm run build
       - name: jekyll-deploy
