--- a/.github/workflows/jekyll-deploy.yml
+++ b/.github/workflows/jekyll-deploy.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: "18.x"
-      - run: sudo `gem install bundler:2.4.8 && sudo bundle install
+      - run: sudo gem install bundler:2.4.8 && sudo bundle install
       - run: npm install
       - name: GHA Jekyll Build
         uses: gha-utilities/jekyll-build@v0.0.9
