--- a/.github/workflows/jekyll-deploy.yml
+++ b/.github/workflows/jekyll-deploy.yml
@@ -20,7 +20,7 @@ jobs:
           ruby-version: '2.7.7' # Not needed with a .ruby-version file
           bundler-cache: true # runs 'bundle install' and caches installed gems automatically
         
-      - run: sudo gem install bundler && bundle install
+      - run: sudo gem install bundler && sudo bundle install
       - run: npm install
       - run: npm run build
       - name: jekyll-deploy
