--- a/.github/workflows/jekyll-deploy.yml
+++ b/.github/workflows/jekyll-deploy.yml
@@ -22,3 +22,7 @@ jobs:
       - run: npm run build
       - name: jekyll-deploy
         uses: DavidS/jekyll-deploy@1.1.1
+        with:
+          node-version: "18.x"
+          ruby-version: '3.3.22' # Not needed with a .ruby-version file
+          bundler-cache: true # runs 'bundle install' and caches installed gems automatically
