Use another Jekyll Deploy Plugin

--- a/.github/workflows/jekyll-deploy.yml
+++ b/.github/workflows/jekyll-deploy.yml
@@ -20,8 +20,8 @@ jobs:
       - run: sudo gem install bundler && sudo bundle install
       - run: npm install
       - run: npm run build
-      - name: jekyll-deploy
-        uses: DavidS/jekyll-deploy@1.1.1
+      - name: Jekyll Deploy Action
+        uses: jeffreytse/jekyll-deploy-action@v0.4.0
         with:
           node-version: "18.x"
           ruby-version: '3.3.22' # Not needed with a .ruby-version file
