--- a/.github/workflows/jekyll-deploy.yml
+++ b/.github/workflows/jekyll-deploy.yml
@@ -22,6 +22,6 @@ jobs:
       - run: npm run build
       - name: Jekyll Deploy Action
         uses: jeffreytse/jekyll-deploy-action@v0.4.0
-        with:
+        env:
           JEKYLL_ENV: production
           GH_PAGES_TOKEN: "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"
