--- a/.github/workflows/jekyll-deploy.yml
+++ b/.github/workflows/jekyll-deploy.yml
@@ -22,6 +22,9 @@ jobs:
       - run: npm run build
       - name: Jekyll Deploy Action
         uses: jeffreytse/jekyll-deploy-action@v0.4.0
+        with:
+          provider: 'github'
+          token: "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" # It's your Personal Access Token(PAT)
         env:
           JEKYLL_ENV: production
           GH_PAGES_TOKEN: "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"
